Fixed border issue with header image and working on menu layout problem

--- a/public/stylesheets/newstuff.css
+++ b/public/stylesheets/newstuff.css
@@ -338,3 +338,4 @@ div.meta { width: 120px !important; }
 
 /* Menjú */
 .tab_body { text-align: left; padding: 0.5em; padding-bottom: 0em; }
+.tab_body a { text-align: left; }
